2010-06-30  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/bus.h: PPC's inlines from libcpu/io.h still have
	un-intuitive argument types (e.g., unsigned instead of uint32_t).
	Added additional 'iotype' arg to BUS_SPACE_DECL macro (ppc only)
	so that we can cast to the correct type as expected by libcpu/io.h.
	Hopefully that doesn't bring us into C99 alias hell.

	* libbsdport/devicet.c: Silence compiler warnings by casting (char)
	argument passed to 'ctype.h' functions [toupper + friends] ->
	(unsigned char) as these functions expect 'int'.
	
2010-03-07  Till Straumann <Till.Straumann@TU-Berlin.de>

	* links.am: POSIXified sed commands for sake of portability.

2010-02-12  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/Makefile.am: Removed obsolete (and commented)
	stuff.

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/libbsdport.h, if_em/e1000_osdep.h:
	We need __BSD_VISIBLE defined. Some things in the rtems headers
	changed with 4.10 (can't pinpoint the details). We now
	#define __INSIDE_RTEMS_BSD_TCPIP_STACK__ before explicitly
	including <rtems/rtems_bsdnet.h> and this seemed to fix
	things for 4.10.

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/libbsdport_post.h: added missing declaration
	of m_defrag() (Chris replaced the dummy #define a while
	ago and provided an implementation instead [thanks!] but
	we also need a declaration).

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/ifmedia.c: fixed 'unused variable' warning
	by removing unused var.

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* if_re/if_re.c: fixed 'unused variable' warning by
	commenting via #ifndef __rtems__ (since code which uses
	the 'msi_disable' var is commented the same way).

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* if_pcn/if_pcn.c: fixed 'type-punned pointer' warning.
	Use 'memcpy' to copy 2 bytes to a short. This requires